Fix last update overlaping long translation result

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -13,7 +13,8 @@ body {
     flex-direction: column;
     background-color: white;
     color: white;
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
     width: auto;
 }
 
